# imgmatch

./: CMakeLists.txt  LICENSE  README.md  bitmap_image.hpp  image_hist.cpp  image_hist.h  image_matcher.cpp  image_matcher.h  imgmatch_config.h  imgmatch_config.h.in  main.cpp  read_bmp.cpp  read_bmp.h  read_jpeg.cpp  read_jpeg.h  read_png.cpp  read_png.h
nbproject/: configurations.xml  project.xml
